force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/JBCXM__SurveyUserAnswer__c.object-meta.xml
<CustomObject>
    <description>This is used to store participants response</description>
    <label>Survey User Answer</label>
    <nameField>
        <displayFormat>SuR-{0000}</displayFormat>
        <label>Survey User Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey User Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>