force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__Answer__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>JBCXM__SurveyAllowedAnswers__c</referenceTo>
    <relationshipLabel>Survey User Answers</relationshipLabel>
    <relationshipName>Answer</relationshipName>
    <type>Lookup</type>
</CustomField>