force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__AnswerText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AnswerText__c</fullName>
    <label>Answer Text</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>