force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__Participant__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>JBCXM__SurveyParticipant__c</referenceTo>
    <relationshipLabel>Survey User Answers</relationshipLabel>
    <relationshipName>Participant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>