force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__Question__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>Survey User Answers</relationshipLabel>
    <relationshipName>Question</relationshipName>
    <type>Lookup</type>
</CustomField>