force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__Rank__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Rank__c</fullName>
    <label>Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>