force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__RankText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RankText__c</fullName>
    <label>RankText</label>
    <length>4</length>
    <type>Text</type>
</CustomField>