force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__SubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SubmissionTime__c</fullName>
    <label>Submission Time</label>
    <type>DateTime</type>
</CustomField>