force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/fields/JBCXM__SurveyMaster__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Master</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>SurveyMaster</relationshipLabel>
    <relationshipName>Master</relationshipName>
    <type>Lookup</type>
</CustomField>