force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>JBCXM__Answer__c</columns>
    <columns>JBCXM__AnswerText__c</columns>
    <columns>JBCXM__Participant__c</columns>
    <columns>JBCXM__Question__c</columns>
    <columns>JBCXM__Rank__c</columns>
    <columns>JBCXM__SubmissionTime__c</columns>
    <columns>JBCXM__SurveyMaster__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>