force-app/main/default/objects/JBCXM__SurveyUserAnswer__c/listViews/JBCXM__My_New_view.listView-meta.xml
<ListView>
    <fullName>JBCXM__My_New_view</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__Answer__c</columns>
    <columns>JBCXM__AnswerText__c</columns>
    <columns>JBCXM__Participant__c</columns>
    <columns>JBCXM__Question__c</columns>
    <columns>JBCXM__Rank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JBCXM__Answer__c</field>
        <operation>contains</operation>
        <value>SuT-0284</value>
    </filters>
    <label>My New view</label>
</ListView>